--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch --verbose",
-    "start": "nodemon src/start.js",
+    "start": "node src/start.js",
+    "dev": "nodemon src/start.js",
+    "prod": "NODE_ENV=production node src/start.js --env=production",
     "create-domain": "zx scripts/dev/domain-generator.js"
   },
   "keywords": [],
@@ -26,12 +28,14 @@
     "helmet": "^7.1.0",
     "joi": "^17.12.3",
     "lodash": "^4.17.21",
+    "minimist": "^1.2.8",
     "mongoose": "^8.3.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
     "ulid": "^2.3.0",
     "winston": "^3.13.0",
-    "winston-daily-rotate-file": "^5.0.0"
+    "winston-daily-rotate-file": "^5.0.0",
+    "winston-loggly-bulk": "^3.3.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
