--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "test:watch": "jest --watch --verbose",
     "start": "node src/start.js",
     "dev": "nodemon src/start.js",
-    "prod": "NODE_ENV=production node src/start.js --env=production",
+    "start:prod": "NODE_ENV=production pm2 start src/start.js --env=production",
+    "stop:prod": "pm2 stop src/start.js",
+    "logs:prod": "pm2 logs src/start.js",
+    "restart:prod": "pm2 restart src/start.js",
     "create-domain": "zx scripts/dev/domain-generator.js"
   },
   "keywords": [],
@@ -32,6 +35,7 @@
     "mongoose": "^8.3.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
+    "pm2": "^5.3.1",
     "ulid": "^2.3.0",
     "winston": "^3.13.0",
     "winston-daily-rotate-file": "^5.0.0",
