--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cron": "^3.1.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "helmet": "^7.1.0",
     "joi": "^17.12.3",
     "lodash": "^4.17.21",
@@ -35,6 +36,8 @@
     "mongoose": "^8.3.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "pm2": "^5.3.1",
     "ulid": "^2.3.0",
     "winston": "^3.13.0",
