--- a/src/configs/config.shared.json
+++ b/src/configs/config.shared.json
@@ -1,3 +1,6 @@
 {
-  "RATE": 100
+  "RATE": 100,
+  "HOST": "http://localhost:4000",
+  "CLIENT_HOST": "http://localhost:3030",
+  "SESSION_SECRET": "1246201153"
 }
