--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,8 +4,8 @@
 name: Ubuntu server deploy
 
 on:
-  push:
-    branches: ['main']
+  # push:
+  #   branches: ['main']
   # pull_request:
   #   branches: ['main']
   workflow_dispatch: 
