--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -2,7 +2,7 @@ name: Bump Version
 
 on:
   push:
-    branches: [main]
+  # temporary disable this workflow
 
 jobs:
   bump-version:
@@ -20,7 +20,9 @@ jobs:
       - run: npm install
       - run: npm version patch -m "Automatic version bump on merge to main"
       - run: git push
-      - run: git push https://github-actions[bot]:${{ secrets.GIT_ACCESS_TOKEN }}@github.com/foyzulkarim/commitstreams-server.git 
+      - run:
+          git push https://github-actions[bot]:${{ secrets.GIT_ACCESS_TOKEN
+          }}@github.com/foyzulkarim/commitstreams-server.git
       - name: Trigger deployment workflow
         uses: benc-uk/workflow-dispatch@v1.1 # Example action, choose one you prefer
         with:
