--- a/src/configs/config.shared.json
+++ b/src/configs/config.shared.json
@@ -1,6 +1,3 @@
 {
-  "RATE": 100,
-  "HOST": "http://localhost:4000",
-  "CLIENT_HOST": "http://localhost:3030",
-  "SESSION_SECRET": "1246201153"
+  "RATE": 100
 }
