--- a/package.json
+++ b/package.json
@@ -40,12 +40,15 @@
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
     "pm2": "^5.3.1",
+    "short-uuid": "^5.2.0",
     "ulid": "^2.3.0",
+    "validator": "^13.11.0",
     "winston": "^3.13.0",
     "winston-daily-rotate-file": "^5.0.0",
     "winston-loggly-bulk": "^3.3.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "jest": "^29.7.0",
     "mongodb-memory-server": "^9.1.8",
     "supertest": "^6.3.4",
