--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "octokit": "^3.2.1",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "pm2": "^5.3.1",
     "short-uuid": "^5.2.0",
