--- a/src/configs/config.example.json
+++ b/src/configs/config.example.json
@@ -1,6 +1,7 @@
 {
   "NODE_ENV": "development",
   "MONGODB_URI": "mongodb://localhost:27017/mydatabase",
+  "DB_NAME": "mydatabase",
   "RATE": 40,
   "PORT": 4000
 }
