feat(auth): Implement email verification using SendGrid
Add email verification system for local authentication strategy:

- Add SendGrid integration for sending verification emails
- Require email verification before allowing login
- Add verification token and expiry fields to User schema
- Implement verification endpoints (/verify-email and /resend-verification)
- Add rate limiting for verification email requests
- Add debug email routes for development environment
- Update registration flow to send verification email
- Add error handling for verification-related errors

BREAKING CHANGE: Local authentication now requires email verification before login

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "license": "ISC",
   "dependencies": {
     "@octokit/rest": "^20.1.1",
+    "@sendgrid/mail": "^8.1.4",
     "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
     "connect-mongo": "^5.1.0",
